# FastAPI-Backend-Template

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.md  PACKAGE_SUMMARY.txt  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deployment/: docker-compose.prod.yml  nginx.conf  traefik.yml
deployment/plugins/kubernetes/: README.md
deployment/plugins/swarm/: README.md
docs/: BACKEND_GUIDE.md  SECURITY_IMPLEMENTATION.md  SECURITY_TEMPLATE_COMPLETE.md  lifespan_tests.md  logging_decorator.md  mypy-fixes.md  reading-the-code.md
docs/core/: middleware.md  security.md
docs/integrations/: alerting.md  database.md
docs/notes/: ai_agent_reference.txt
docs/scaling/: README.md  level1-multi-worker.md  level2-gunicorn.md  level3-background-tasks.md  level4-horizontal-scaling.md  load-testing.md  troubleshooting.md
scripts/: dev.sh  lint.sh  setup.sh  test.sh
src/app/: __init__.py  main.py
src/app/api/routes/: __init__.py  database_example.py  health.py  meta.py
src/app/core/: __init__.py  config.py  decorators.py  lifespan.py  logging.py  middleware.py
src/app/dependencies/: __init__.py  config.py  database.py  services.py
src/app/integrations/: alerting.py  database.py
src/app/middleware/: __init__.py  advanced.py  auth.py  monitoring.py  rate_limit.py  security.py
src/app/schemas/: __init__.py  health.py
src/app/services/: __init__.py  database_example.py  health.py
src/app/utils/: __init__.py
tests/: conftest.py  test_health.py  test_lifespan.py  test_security_middleware.py
tests/integrations/: test_alerting.py  test_alerting_middleware.py  test_database.py
